# documenso

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
documenso/: hooks.py  modules.txt  patches.txt
documenso/config/: desktop.py  docs.py
documenso/documenso/api/: documenso.py  request_sign.py  webhook.py
documenso/documenso/doctype/documenso_authorized_signatory/: documenso_authorized_signatory.json  documenso_authorized_signatory.py
documenso/documenso/doctype/documenso_doctype/: documenso_doctype.json  documenso_doctype.py
documenso/documenso/doctype/documenso_print_format/: documenso_print_format.json  documenso_print_format.py
documenso/documenso/doctype/documenso_settings/: documenso_settings.js  documenso_settings.json  documenso_settings.py  test_documenso_settings.py
documenso/documenso/doctype/documenso_signatory_detail/: documenso_signatory_detail.json  documenso_signatory_detail.py
documenso/documenso/page/documenso_signing_status/: documenso_signing_status.js  documenso_signing_status.json
documenso/documenso/utils/py/: create_custom_fields.py  delete_custom_fields.py  scheduler.py
documenso/public/js/: documenso.bundle.js
documenso/templates/pages/: documenso_cancel_page.html  documenso_failure_page.html  documenso_success_page.html
